Fixed the spacing issue on banner

--- a/src/style.scss
+++ b/src/style.scss
@@ -272,7 +272,7 @@ body {
     width: 380px !important;
     display: flex;
     align-content: center;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
